@@ -1,7 +1,5 @@
 GCONFD_BINARY_NAME=gconfd-2
 
-address=`pkg-config dbus-1 --variable system_bus_default_address`
-
 INCLUDES=								\
 	-I$(top_srcdir)							\
 	-I$(top_builddir)						\
@@ -20,7 +18,6 @@ INCLUDES=								\
 	-DVERSION=\""$(VERSION)"\"					\
 	-DGCONF_ENABLE_INTERNALS=1					\
 	-DGCONFD=\""$(GCONFD_BINARY_NAME)"\"				\
-        -DGCONF_SYSTEM_BUS_ADDRESS=\""$(address)"\"                       \
 	-DDBUS_API_SUBJECT_TO_CHANGE=\"1\"
 
 if GTK
